Shopping cart icon/button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <div class="col">
+    <div class="col-2">
         <span>EpiCT Games</span>
     </div>
     <div class="col-6">
@@ -9,6 +9,11 @@
             <mat-icon> search</mat-icon>
         </mat-form-field>
     </div>
-    <div class="col"></div>
+
+    <div class="col px-3">
+        <button mat-icon-button Basic> 
+            <mat-icon>shopping_cart</mat-icon>
+        </button>
+    </div>
 </mat-toolbar>
 <router-outlet></router-outlet>
