--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<mat-toolbar>
-    <div class="col-2">
-        <span>EpiCT Games</span>
+<mat-toolbar color="primary">
+    <div class="col-3">
+        <a mat-button routerLink="/home"> <img src="assets/logo.png" style="height: 4rem"> </a> 
     </div>
+
     <div class="col-6">
         <mat-form-field style="font-size: 0.95rem;">
             <mat-label>Pesquisar</mat-label>
@@ -11,9 +12,12 @@
     </div>
 
     <div class="col px-3">
-        <button mat-icon-button Basic> 
+        <button mat-icon-button> 
             <mat-icon>shopping_cart</mat-icon>
         </button>
     </div>
 </mat-toolbar>
+
 <router-outlet></router-outlet>
+
+<app-footer></app-footer>
