created shared service, show-event and show-product
Co-authored-by: Pedro Tavares Lebre da Rocha <PedroRocha9@users.noreply.github.com>
Co-authored-by: ClaudioAsensio <ClaudioAsensio@users.noreply.github.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,10 @@
     </div>
 
     <div class="col-6">
-        <mat-form-field style="font-size: 0.95rem;">
+        <mat-form-field>
             <mat-label>Pesquisar</mat-label>
             <input matInput #input>
-            <mat-icon> search</mat-icon>
+            <mat-icon>search</mat-icon>
         </mat-form-field>
     </div>
 
