--- a/src/app/product/product.component.scss
+++ b/src/app/product/product.component.scss
@@ -1,3 +1,13 @@
 mat-card {
     background-color: #09703e;
+    cursor: pointer;
+}
+
+img {
+    width: 300px;
+    margin-bottom: 10px;
+}
+
+.large-btn {
+    width: 69%;
 }
