--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
         <a mat-button routerLink="/home"> <img src="assets/logo.png" style="height: 4rem"> </a> 
     </div>
 
-    <div class="col-6">
+    <div class="col-5">
         <mat-form-field>
             <mat-label>Pesquisar</mat-label>
             <input matInput #input>
@@ -11,9 +11,27 @@
         </mat-form-field>
     </div>
 
-    <div class="col px-3">
-        <button mat-icon-button> 
+    <div style="width: 60px;"></div>
+
+    <div class="col">
+        <button mat-icon-button (click)="redirectCart()" [matBadge]="cart_number" [matBadgeHidden]="cart_number == 0" matBadgeColor="accent"> 
             <mat-icon>shopping_cart</mat-icon>
+        </button>
+    </div>
+
+    <div class="col-1"></div>
+
+    <div class="col">
+        <button mat-button>
+            Login
+            <mat-icon>login</mat-icon>
+        </button>
+    </div>
+
+    <div class="col mr-4">
+        <button mat-button> 
+            Registo
+            <mat-icon>app_registration</mat-icon>
         </button>
     </div>
 </mat-toolbar>
