--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <mat-tab-group style="background-color: grey" mat-align-tabs="center">
     <mat-tab label="Games">
-        <mat-grid-list cols="3" rowHeight="2:1" [gutterSize]="'10px'">
+        <mat-grid-list cols="4" rowHeight="1:1">
             <mat-grid-tile *ngFor="let product of products">
                 <app-product [data]="product"></app-product>
             </mat-grid-tile>
