added login and register components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,14 +22,14 @@
     <div class="col-1"></div>
 
     <div class="col">
-        <button mat-button>
+        <button mat-button (click)="redirectLogin()">
             Login
             <mat-icon>login</mat-icon>
         </button>
     </div>
 
     <div class="col mr-4">
-        <button mat-button> 
+        <button mat-button (click)="redirectRegister()"> 
             Registo
             <mat-icon>app_registration</mat-icon>
         </button>
