--- a/src/app/product/product.component.scss
+++ b/src/app/product/product.component.scss
@@ -1,13 +1,14 @@
 mat-card {
     background-color: #09703e;
     cursor: pointer;
+    width: auto;
+    height: auto;
+    margin: 30px;
 }
 
-img {
-    width: 300px;
+mat-card img{
+    object-fit: cover; /*this makes the image in src fit to the size specified below*/
+    width: 100%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
+    height: 80%;
     margin-bottom: 10px;
-}
-
-.large-btn {
-    width: 69%;
 }
