--- a/src/app/show-cart/show-cart.component.html
+++ b/src/app/show-cart/show-cart.component.html
@@ -1,1 +1,47 @@
-<p>show-cart works!</p>
+<div class="row d-flex justify-content-center w-100 h-100">
+    <div class="col-1"></div>
+
+    <div class="col">
+        <div class="row my-5">
+            <h1>Carrinho de compras</h1>
+        </div>
+
+        <div class="row">
+            <div class="col"><p>Item</p></div>
+    
+            <div class="col"><p>Descrição</p></div>
+            
+            <div class="col"><p>Preço</p></div>
+    
+            <div class="col"><p>Quantidade</p></div>
+    
+            <div class="col"><p>Total</p></div>
+        </div>
+
+        <div class="row" *ngFor="let item of cart">
+            <div class="col">
+                <img src="{{item.image}}" alt="{{item.title}}" width="100" height="100">
+            </div>
+    
+            <div class="col">
+                <p>{{item.title}}</p>
+            </div>
+    
+            <div class="col">
+                <p>{{item.key_price}}</p>
+            </div>
+    
+            <div class="col">
+                <p>{{item.qty}}</p>
+            </div>
+    
+            <div class="col">
+                <p>{{totalPrice(item.qty, item.key_price)}} €</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-3"></div>
+    
+    <button mat-button (click)="resetCart()">Reset</button>
+</div>
