--- a/src/app/product/product.component.scss
+++ b/src/app/product/product.component.scss
@@ -1,14 +1,20 @@
 mat-card {
     background-color: #09703e;
     cursor: pointer;
-    width: auto;
-    height: auto;
-    margin: 30px;
+    width: 85%;
+    height: 22rem;
+    margin: 30px
 }
 
 mat-card img{
     object-fit: cover; /*this makes the image in src fit to the size specified below*/
     width: 100%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
-    height: 80%;
+    aspect-ratio: 1/1;
     margin-bottom: 10px;
+    border-radius: 5px;
+}
+
+h2 {
+    margin: auto;
+    text-align: center;
 }
