Product card fix

--- a/src/app/product/product.component.scss
+++ b/src/app/product/product.component.scss
@@ -2,7 +2,7 @@ mat-card {
     background-color: #09703e;
     cursor: pointer;
     width: 85%;
-    height: 22rem;
+    height: 95%;
     margin: 30px
 }
 
