--- a/src/app/show-cart/show-cart.component.html
+++ b/src/app/show-cart/show-cart.component.html
@@ -7,41 +7,83 @@
         </div>
 
         <div class="row">
-            <div class="col"><p>Item</p></div>
+            <div class="col"><p class="header">Item</p></div>
     
-            <div class="col"><p>Descrição</p></div>
+            <div class="col"><p class="header">Descrição</p></div>
+
+            <div class="col"><p class="header">Formato</p></div>
             
-            <div class="col"><p>Preço</p></div>
+            <div class="col"><p class="header">Preço</p></div>
     
-            <div class="col"><p>Quantidade</p></div>
+            <div class="col"><p class="header">Quantidade</p></div>
     
-            <div class="col"><p>Total</p></div>
+            <div class="col"><p class="header">Total</p></div>
+
+            <mat-divider class="my-3" style="color: black; background-color: black"></mat-divider>
         </div>
 
-        <div class="row" *ngFor="let item of cart">
-            <div class="col">
-                <img src="{{item.image}}" alt="{{item.title}}" width="100" height="100">
+
+        <div class="row d-flex my-3" *ngFor="let item of cart">
+            <div class="col h-100 my-auto">
+                <img src="{{item.image}}" alt="{{item.title}}">
             </div>
     
-            <div class="col">
+            <div class="col h-100 my-auto">
                 <p>{{item.title}}</p>
             </div>
+
+            <div class="col h-100 my-auto">
+                <p>{{item.type == 'key' ? 'Chave' : 'CD'}}</p>
+            </div>
     
-            <div class="col">
+            <div class="col h-100 my-auto">
                 <p>{{item.key_price}}</p>
             </div>
     
-            <div class="col">
+            <div class="col h-100 my-auto">
                 <p>{{item.qty}}</p>
             </div>
     
-            <div class="col">
-                <p>{{totalPrice(item.qty, item.key_price)}} €</p>
+            <div class="col h-100 my-auto">
+                <div class="row">
+                    <div class="col">
+                        <p>{{totalPriceProduct(item.qty, item.key_price)}} €</p>
+                    </div>
+
+                    <div class="col">
+                        <mat-icon color="warn" (click)="removeItem(item)">close</mat-icon>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="row d-flex my-3">
+            <div class="col"></div>
+    
+            <div class="col-2 mx-2">
+                <div class="row h-50"></div>
+
+                <div class="row h-50">
+                    <button mat-raised-button color="warn" style="width: 100%;" (click)="resetCart()">
+                        Esvaziar Carrinho
+                        <mat-icon>delete_forever</mat-icon>
+                    </button>
+                </div>
+            </div>
+    
+            <div class="col-3 mx-2">
+                <div class="row h-50"><p>Total da Encomenda: {{totalPriceCart()}} €</p></div>
+                
+                <div class="row h-50">
+                    <button mat-raised-button color="primary" (click)="resetCart()">
+                        Finalizar Compra
+                        <mat-icon>done_all</mat-icon>
+                    </button>
+                </div>
+                
             </div>
         </div>
     </div>
-
-    <div class="col-3"></div>
     
-    <button mat-button (click)="resetCart()">Reset</button>
+    <div class="col-1"></div>
 </div>
