--- a/src/app/show-product/show-product.component.scss
+++ b/src/app/show-product/show-product.component.scss
@@ -26,8 +26,10 @@ h3{
 }
 
 #comment{
-    // margin-left: auto;
-    // margin-right: auto;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 5%;
+    margin-top: 5%;
     width: 25rem;
     height: 9rem;
     border-radius: 10px;
@@ -36,6 +38,7 @@ h3{
     padding: 10px;
     font-size: 20px;
     word-break: break-all;
+    
 }
 
 #rating{
