--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,1 +1,23 @@
-<p>event works!</p>
+<mat-card [class.mat-elevation-z2]="!isActive1" [class.mat-elevation-z8]="isActive1"
+    (mouseenter)="isActive1 = true" (mouseleave)="isActive1 = false">
+    
+    <mat-card-content>
+        <img src="{{data.img}}">
+        <mat-divider inset></mat-divider>
+    </mat-card-content>
+    
+    <h2 >{{data.title}}</h2>      
+
+    <mat-card-actions>
+        <div class="row">
+            <div class="col">
+                <!-- <button mat-button style="width: 100%;" (click)="open_game()">{{data.key_price}}</button> -->
+            </div>
+            <div class="col-4">
+                <button mat-button>
+                    <mat-icon>shopping_cart</mat-icon>
+                </button>
+            </div>
+        </div>
+    </mat-card-actions>
+</mat-card>
