--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,8 +15,8 @@
                 </mat-tab>
                 <mat-tab label="Events">
                     <mat-grid-list cols="1" rowHeight="6:1" [gutterSize]="'10px'">
-                        <mat-grid-tile *ngFor="let product of products">
-                            <app-product [data]="product"></app-product>
+                        <mat-grid-tile *ngFor="let event of events">
+                            <app-event [data]="event"></app-event>
                         </mat-grid-tile>
                     </mat-grid-list>
                 </mat-tab>
