--- a/src/app/show-cart/show-cart.component.scss
+++ b/src/app/show-cart/show-cart.component.scss
@@ -11,3 +11,14 @@ p {
     font-weight: 500;
     text-align: center;
 }
+
+//input outline color
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+    color: #7b1fa2 !important;
+}
+
+.mat-form-field {
+    width: 30%;
+    text-align: center;
+    margin: auto;
+}
