frontend filters and new colors

--- a/src/app/show-cart/show-cart.component.html
+++ b/src/app/show-cart/show-cart.component.html
@@ -52,7 +52,7 @@
                         <p>{{totalPriceProduct(item.qty, item.key_price)}} €</p>
                     </div>
 
-                    <div class="col">
+                    <div class="col-2">
                         <mat-icon color="warn" (click)="removeItem(item)">close</mat-icon>
                     </div>
                 </div>
