--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,26 +1,87 @@
-<div class="row w-100">
-    <div class="row">
-        <div class="col-2">
-            <p>Filtros e cenas</p>
+<div class="row w-100 h-100">
+    <div class="col-2" style="margin-left: 30px;">
+        <div class="row">
+            <p>Filtros</p>
         </div>
-        
-        <div class="col">
-            <mat-tab-group style="background-color: grey" mat-align-tabs="center">
-                <mat-tab label="Games">
-                    <mat-grid-list cols="4" rowHeight="1:1.3">
-                        <mat-grid-tile *ngFor="let product of products">
-                            <app-product [data]="product"></app-product>
-                        </mat-grid-tile>
-                    </mat-grid-list>
-                </mat-tab>
-                <mat-tab label="Events">
-                    <mat-grid-list cols="1" rowHeight="6:1" [gutterSize]="'10px'">
-                        <mat-grid-tile *ngFor="let event of events">
-                            <app-event [data]="event"></app-event>
-                        </mat-grid-tile>
-                    </mat-grid-list>
-                </mat-tab>
-            </mat-tab-group>
+
+        <div class="row">
+            <p>Preço</p>
         </div>
+
+        <div class="row">
+            <ngx-slider class="custom-slider" [(value)]="minValue" [(highValue)]="maxValue" [options]="options"></ngx-slider>
+        </div>
+
+        <mat-divider class="my-3"></mat-divider>
+
+        <div class="row">
+            <p>Categorias</p>
+        </div>
+
+        <div class="row">
+            <mat-checkbox class="my-2"><span>Ação</span></mat-checkbox>
+            <mat-checkbox class="my-2"><span>Aventura</span></mat-checkbox>
+            <mat-checkbox class="my-2"><span>FPS</span></mat-checkbox>
+            <mat-checkbox class="my-2"><span>RPG</span></mat-checkbox>
+            <mat-checkbox class="my-2"><span>Estratégia</span></mat-checkbox>
+            <mat-checkbox class="my-2"><span>Battle Royale</span></mat-checkbox>
+            <button *ngIf="!categories_expanded" (click)="categories_expanded=true" mat-raised-button>Mostrar mais <mat-icon>expand_more</mat-icon></button>
+            
+            <mat-checkbox *ngIf="categories_expanded" class="my-2"><span>Desporto</span></mat-checkbox>
+            <mat-checkbox *ngIf="categories_expanded" class="my-2"><span>MMO</span></mat-checkbox>
+            <mat-checkbox *ngIf="categories_expanded" class="my-2"><span>Corridas</span></mat-checkbox>
+            <mat-checkbox *ngIf="categories_expanded" class="my-2"><span>Indie</span></mat-checkbox>
+            <mat-checkbox *ngIf="categories_expanded" class="my-2"><span>Luta</span></mat-checkbox>
+            <button *ngIf="categories_expanded" (click)="categories_expanded=false" mat-raised-button>Mostrar menos <mat-icon>expand_less</mat-icon></button>          
+        </div>
+
+        <mat-divider class="my-3"></mat-divider>
+
+        <div class="row">
+            <p>Plataform</p>
+        </div>
+
+        <div class="row">
+            <mat-checkbox class="my-2"><span>Steam</span></mat-checkbox>
+            <mat-checkbox class="my-2"><span>Origin</span></mat-checkbox>
+            <mat-checkbox class="my-2"><span>Epic Games</span></mat-checkbox>
+            <mat-checkbox class="my-2"><span>Battle.net</span></mat-checkbox>
+            <mat-checkbox class="my-2"><span>PlayStation</span></mat-checkbox>
+            <mat-checkbox class="my-2"><span>Xbox</span></mat-checkbox>
+            <mat-checkbox class="my-2"><span>Nintendo</span></mat-checkbox>
+        </div>
+
+        <mat-divider class="my-3"></mat-divider>
+
+        <div class="row">
+            <p>Restrição de Idade</p>
+        </div>
+
+        <div class="row">
+            <mat-checkbox class="my-2"><span>PEGI 3</span></mat-checkbox>
+            <mat-checkbox class="my-2"><span>PEGI 7</span></mat-checkbox>
+            <mat-checkbox class="my-2"><span>PEGI 12</span></mat-checkbox>
+            <mat-checkbox class="my-2"><span>PEGI 16</span></mat-checkbox>
+            <mat-checkbox class="my-2"><span>PEGI 18</span></mat-checkbox>
+        </div>
+    </div>
+    
+    <div class="col">
+        <mat-tab-group mat-align-tabs="center">
+            <mat-tab label="Games">
+                <mat-grid-list cols="4" rowHeight="1:1.3">
+                    <mat-grid-tile *ngFor="let product of products">
+                        <app-product [data]="product"></app-product>
+                    </mat-grid-tile>
+                </mat-grid-list>
+            </mat-tab>
+            <mat-tab label="Events">
+                <mat-grid-list cols="1" rowHeight="6:1" [gutterSize]="'10px'">
+                    <mat-grid-tile *ngFor="let event of events">
+                        <app-event [data]="event"></app-event>
+                    </mat-grid-tile>
+                </mat-grid-list>
+            </mat-tab>
+        </mat-tab-group>
     </div>
 </div>
