--- a/src/app/show-cart/show-cart.component.html
+++ b/src/app/show-cart/show-cart.component.html
@@ -77,7 +77,7 @@
                 <div class="row h-50"><p>Total da Encomenda: {{totalPriceCart()}} €</p></div>
                 
                 <div class="row h-50">
-                    <button mat-raised-button color="primary" (click)="resetCart()">
+                    <button mat-raised-button color="primary" routerLink="/checkout">
                         Finalizar Compra
                         <mat-icon>done_all</mat-icon>
                     </button>
