--- a/src/app/show-cart/show-cart.component.html
+++ b/src/app/show-cart/show-cart.component.html
@@ -33,7 +33,7 @@
             </div>
 
             <div class="col h-100 my-auto">
-                <p>{{item.type == 'key' ? 'Chave' : 'CD'}}</p>
+                <p>{{item.type == 'key' ? 'Chave' : 'CD-ROM'}}</p>
             </div>
     
             <div class="col h-100 my-auto">
