--- a/src/app/checkout/checkout.component.scss
+++ b/src/app/checkout/checkout.component.scss
@@ -1,8 +1,3 @@
-.mat-form-field {
-    margin-top: 16px;
-    width: 70%;
-}
-
 mat-stepper {
     background-color: transparent;
     margin-left: 10vw;
@@ -21,7 +16,7 @@ mat-card {
 
 img{
     object-fit: cover; /*this makes the image in src fit to the size specified below*/
-    max-width: 80%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
+    max-width: 70%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
     aspect-ratio: 1/1;
     margin: auto;
     margin-bottom: 10px;
@@ -31,4 +26,13 @@ img{
 h2 {
     margin: auto;
     text-align: center;
+}
+
+p {
+    font-size: 1.15rem;
+}
+
+b {
+    font-size: 1.27rem;
+    font-weight: 500;
 }
