--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
         <mat-form-field>
             <mat-label>Pesquisar</mat-label>
             <input matInput (keyup)="applyFilter($event)" #input>
-            <mat-icon>search</mat-icon>
+            <mat-icon matSuffix>search</mat-icon>
         </mat-form-field>
     </div>
 
