--- a/src/app/show-cart/show-cart.component.scss
+++ b/src/app/show-cart/show-cart.component.scss
@@ -7,6 +7,11 @@ p {
     text-align: center;
 }
 
+h1 {
+    font-weight: 500;
+    font-size: 1.5rem;
+}
+
 .header {
     font-weight: 500;
     text-align: center;
@@ -15,6 +20,10 @@ p {
 //input outline color
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
     color: #7b1fa2 !important;
+}
+
+::ng-deep body {
+    background-color: #F1FFFA;
 }
 
 .mat-form-field {
