--- a/src/app/show-product/show-product.component.html
+++ b/src/app/show-product/show-product.component.html
@@ -1,89 +1,85 @@
-<div class="row my-3"></div>
-
-<div class="row">
-    <div class="col-4">
-        <img src="{{product?.image}}" >
-        <div>
-            <!-- avaliaçao do jogo -->
-            <mat-card id="rating">
-                <!-- <mat-card-header > -->
-                <mat-card-title>Avaliação</mat-card-title>
-                <!-- </mat-card-header> -->
-                <mat-card-content >
-                    <mat-card-title >
-                        <mat-icon *ngFor="let i of rateInt">star</mat-icon>
-                        <mat-icon *ngIf="rateDouble > 0">star_half</mat-icon> 
-                    </mat-card-title>
-                 </mat-card-content>
-            </mat-card>
-           
-        </div>           
-    </div>
-
-    <!-- <div class="col-"></div> -->
-    
+<div class="row w-100 h-100">
     <div class="col">
-        <h1>{{product?.title}}</h1>
+        <div class="row my-3"></div>
 
         <div class="row">
-            <div class="col">
-                <p>{{product?.description}}</p>
-            </div>
-
-            <div class="col"> 
+            <div class="col-5">
                 <div class="row">
+                    <img class="mx-auto" src="{{product?.image}}" >
                 </div>
-        
-                <div class="row">
-                    <h2>{{product?.key_price}}</h2>
-                    <button (click)="addCartKey()" mat-raised-button color="primary">Comprar key
-                        <mat-icon style="transform: rotate(45deg);">key</mat-icon>
-                    </button>
-                    
-                </div>
-
-                <br>
-
-                <div class="row">
-                    <h2>{{product?.price}}</h2>
-                    <button *ngIf="product.price != null" (click)="addCartCD()" mat-raised-button color="primary">Comprar CD
-                        <mat-icon>album</mat-icon>
-                    </button>
-                </div>
-
+                
+                <div class="row mx-auto my-4">
+                    <h1 class="text-center">Avaliação</h1>
+                    <div class="row d-flex justify-content-center">
+                        <mat-icon *ngFor="let i of rateInt">star</mat-icon>
+                        <mat-icon *ngIf="rateDouble > 0">star_half</mat-icon> 
+                    </div>
+                </div>           
             </div>
-        </div>
-    </div>
-</div>
-
-<div class="col">
-    <div class="row" style="background-color: grey;">
-        <h3>Comentários</h3>
-    </div>
-
-    <div class="row" >
-        <!-- display product comments in cols -->
-        <div class="col" *ngFor="let comment of product?.comments" >
-            <div class="col">
-                <mat-card id="comment">
-                    {{comment}}
-                </mat-card>
-            </div>
-        </div>
-
-        <div class="col">
-            <mat-card id="comment">
-                <form [formGroup]="form">
-                    <mat-form-field appearance="fill">
-                        <mat-label>Send message</mat-label>
-                        <input  matInput type="text" formControlName="msg" >
-                        <button *ngIf="form.get('msg')?.value" matSuffix mat-icon-button aria-label="Clear" (click)="addComment()">
-                            <mat-icon>send</mat-icon>
-                        </button>
-                    </mat-form-field>
-                </form>
             
-            </mat-card>
-        </div> 
+            <div class="col ml-3">
+                <div class="row mb-3">
+                    <h1 id="title">{{product?.title}}</h1>
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <div class="row">
+                            <p><b>Plataformas: </b>{{platforms(product)}}</p>
+                        </div>
+                        
+                        <div class="row">
+                            <p><b>Descrição: </b>{{product?.description}}</p>
+                        </div>
+                    </div>
+
+                    <div class="col-5 h-100"> 
+                        <div class="row my-auto">
+                            <h2 class="price">{{product?.key_price}}</h2>
+                            <button (click)="addCartKey()" mat-raised-button color="primary">Comprar key
+                                <mat-icon style="transform: rotate(45deg);">key</mat-icon>
+                            </button>                            
+                        </div>
+
+                        <div class="row my-5">
+                            <h2 class="price">{{product?.price}}</h2>
+                            <button *ngIf="product.price != null" (click)="addCartCD()" mat-raised-button color="primary">Comprar CD
+                                <mat-icon>album</mat-icon>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-4 mb-2 mx-5">
+            <mat-divider></mat-divider>
+            <h1 class="mt-3" style="margin-left: 2%; font-weight: 450;">Comentários</h1>
+        </div>
+
+        <div class="row mx-5">
+            <!-- display product comments in cols -->
+            <div class="col" *ngFor="let comment of product?.comments" >
+                <div class="col">
+                    <mat-card id="comment" class="mat-elevation-z8">
+                        {{comment}}
+                    </mat-card>
+                </div>
+            </div>
+
+            <div class="col">
+                <mat-card id="comment" class="mat-elevation-z8">
+                    <form [formGroup]="form">
+                        <mat-form-field appearance="fill">
+                            <mat-label>Send message</mat-label>
+                            <input  matInput type="text" formControlName="msg" >
+                            <button *ngIf="form.get('msg')?.value" matSuffix mat-icon-button aria-label="Clear" (click)="addComment()">
+                                <mat-icon>send</mat-icon>
+                            </button>
+                        </mat-form-field>
+                    </form>
+                </mat-card>
+            </div> 
+        </div>
     </div>
 </div>
