--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,5 +22,9 @@ $angular-default-theme: mat.define-light-theme(
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body { 
+  height: 100%;
+  background-color: #F1FFFA;
+}
+
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
