--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,22 +1,23 @@
-<mat-card [class.mat-elevation-z2]="!isActive1" [class.mat-elevation-z8]="isActive1"
-    (mouseenter)="isActive1 = true" (mouseleave)="isActive1 = false">
-    
+<mat-card [class.mat-elevation-z2]="!isActive1" [class.mat-elevation-z8]="isActive1" (mouseenter)="isActive1 = true" (mouseleave)="isActive1 = false">
+
     <mat-card-content>
-        <img src="{{data.img}}">
-        <mat-divider inset></mat-divider>
+        <div class="col-1">
+            <img src="{{data.img}}">
+        </div>
+        <div class="col-2">
+            <h1>{{data.title}}</h1>
+            <mat-divider inset></mat-divider>
+            <p>{{data.location}}</p>
+            <p>{{data.game}}</p>
+            <p>{{data.start_date}} to {{data.end_date}}</p>
+            <p>{{data.price}}</p>
+        </div>
     </mat-card-content>
-    
-    <h2 >{{data.title}}</h2>      
 
     <mat-card-actions>
         <div class="row">
             <div class="col">
-                <!-- <button mat-button style="width: 100%;" (click)="open_game()">{{data.key_price}}</button> -->
-            </div>
-            <div class="col-4">
-                <button mat-button>
-                    <mat-icon>shopping_cart</mat-icon>
-                </button>
+                <button mat-button style="width: 100%;" (click)="open_event()">{{data.key_price}}</button>
             </div>
         </div>
     </mat-card-actions>
