--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,12 +1,11 @@
-<mat-card [class.mat-elevation-z2]="!isActive1" [class.mat-elevation-z8]="isActive1"
-    (mouseenter)="isActive1 = true" (mouseleave)="isActive1 = false">
-    
+<mat-card [class.mat-elevation-z2]="!isActive1" [class.mat-elevation-z8]="isActive1" (mouseenter)="isActive1 = true" (mouseleave)="isActive1 = false">
+
     <mat-card-content (click)="open_game()">
         <img src="{{data.image}}">
         <mat-divider inset></mat-divider>
     </mat-card-content>
-    
-    <h2 (click)="open_game()">{{data.title}}</h2>      
+
+    <h2 (click)="open_game()">{{data.title}}</h2>
 
     <mat-card-actions>
         <div class="row">
