started create event form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,12 @@
         </button>
     </div>
 
-    <div class="col-1"></div>
+    <div class="col">
+        <button mat-button (click)="redirectCreateEvent()">
+            Create event
+            <mat-icon>event</mat-icon>
+        </button>
+    </div>
 
     <div class="col">
         <button mat-button (click)="redirectLogin()">
