--- a/src/app/show-product/show-product.component.html
+++ b/src/app/show-product/show-product.component.html
@@ -13,6 +13,8 @@
                     <div class="row d-flex justify-content-center">
                         <mat-icon *ngFor="let i of rateInt">star</mat-icon>
                         <mat-icon *ngIf="rateDouble > 0">star_half</mat-icon> 
+                        <!-- <mat-icon class="material-symbols-outlined" *ngIf="rateDouble < 1">star</mat-icon> -->
+                        <!-- <mat-icon *ngFor="let i of rateEmpty">star_half</mat-icon> -->
                     </div>
                 </div>           
             </div>
