--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,17 +1,29 @@
 <mat-card [class.mat-elevation-z2]="!isActive1" [class.mat-elevation-z8]="isActive1" (mouseenter)="isActive1 = true" (mouseleave)="isActive1 = false">
 
     <mat-card-content>
-        <div class="col-1">
-            <img src="{{data.img}}">
+        <div class="row">
+
+            <div class="col-4 d-flex justify-content-start">
+                <img *ngIf="data.img" src="{{data.img}}">
+                <img *ngIf="!data.img" src="assets/img/events/event_default.jpg">
+            </div>
+            
+            <div class="col">
+                <h1>{{data.title}}</h1>
+                <mat-divider inset></mat-divider>
+                <p>{{data.location}}</p>
+                <p>{{data.game}}</p>
+                <p>{{data.start_date}} to {{data.end_date}}</p>
+                <p>{{data.price}}</p>
+            </div>
+
+            <div class="col-2 d-flex justify-content-end">
+                <button mat-raised-button color="primary" style="margin-top:auto;">
+                    Comprar bilhete <mat-icon>local_activity </mat-icon> 
+                </button>
+            </div>
         </div>
-        <div class="col-2">
-            <h1>{{data.title}}</h1>
-            <mat-divider inset></mat-divider>
-            <p>{{data.location}}</p>
-            <p>{{data.game}}</p>
-            <p>{{data.start_date}} to {{data.end_date}}</p>
-            <p>{{data.price}}</p>
-        </div>
+        
     </mat-card-content>
 
     <mat-card-actions>
